[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "LS_COLORS manager with multiple themes"
homepage = "https://github.com/sharkdp/vivid"
license = "MIT/Apache-2.0"
name = "vivid"
readme = "README.md"
repository = "https://github.com/sharkdp/vivid"
version = "0.4.0"
exclude = ["demo/*"]
edition = "2018"

[dependencies]
yaml-rust = "0.4"
lazy_static = "1.2.0"
ansi_colours = "1.0"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]
